; ModuleID = '/home/carl/AnghaBench/RetroArch/wii/libogc/libogc/extr_gcsd.c___gcsd_startup.c'
source_filename = "/home/carl/AnghaBench/RetroArch/wii/libogc/libogc/extr_gcsd.c___gcsd_startup.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@__gcsd_init = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @__gcsd_startup to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @__gcsd_startup(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* @__gcsd_init, align 4
  %5 = icmp eq i32 %4, 1
  br i1 %5, label %6, label %9

6:                                                ; preds = %1
  %7 = load i32, i32* %3, align 4
  %8 = call i32 @__gcsd_isInserted(i32 %7)
  store i32 %8, i32* %2, align 4
  br label %14

9:                                                ; preds = %1
  %10 = call i32 (...) @sdgecko_initBufferPool()
  %11 = call i32 (...) @sdgecko_initIODefault()
  store i32 1, i32* @__gcsd_init, align 4
  %12 = load i32, i32* %3, align 4
  %13 = call i32 @__gcsd_isInserted(i32 %12)
  store i32 %13, i32* %2, align 4
  br label %14

14:                                               ; preds = %9, %6
  %15 = load i32, i32* %2, align 4
  ret i32 %15
}

declare dso_local i32 @__gcsd_isInserted(i32) #1

declare dso_local i32 @sdgecko_initBufferPool(...) #1

declare dso_local i32 @sdgecko_initIODefault(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
